--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>Frag.io</title>
 
+    <style>/* Removes Mobile Highlight */ *{-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}</style>
+
+    <script src="http://code.createjs.com/easeljs-0.4.2.min.js"></script>
+    <script src="http://code.createjs.com/tweenjs-0.2.0.min.js"></script>
+    <script src="http://code.createjs.com/soundjs-0.2.0.min.js"></script>
+    <script src="http://code.createjs.com/preloadjs-0.1.0.min.js"></script>
+    <script src="Main.js"></script>
+</head>
+
+<body onload="Main();">
+    <canvas id="Stage" width="480" height="320"></canvas>
 </body>
+
 </html>
