--- a/src/client/index.html
+++ b/src/client/index.html
@@ -9,6 +9,7 @@
     <script src="http://code.createjs.com/tweenjs-0.2.0.min.js"></script>
     <script src="http://code.createjs.com/soundjs-0.2.0.min.js"></script>
     <script src="http://code.createjs.com/preloadjs-0.1.0.min.js"></script>
+    <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
     <script src="Main.js"></script>
 </head>
 
