Made x movement frictiony

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Frag.io</title>
+    <title>frag.io</title>
 
     <style>/* Removes Mobile Highlight */ *{-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}</style>
 
@@ -10,6 +10,7 @@
 </head>
 
 <body onload="Main();">
+
     <canvas id="Stage" width="1440" height="803"></canvas>
 </body>
 
