--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,6 +7,7 @@
 
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
     <script src="Main.js"></script>
+    <script src="gameObjects.js"></script>
 </head>
 
 <body onload="Main();">
