Moved most functions to the player object and renamed Main.js to lowercase

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,7 +6,7 @@
     <style>/* Removes Mobile Highlight */ *{-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}</style>
 
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-    <script src="Main.js"></script>
+    <script src="main.js"></script>
     <script src="gameObjects.js"></script>
 </head>
 
