Added a blue player and started to comment code

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -12,7 +12,7 @@
 
 <body onload="Main();">
 
-    <canvas id="Stage" width="1440" height="803"></canvas>
+    <canvas id="Canvas" width="1440" height="803"></canvas>
 </body>
 
 </html>
