Cleaned up index.html

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,16 +3,22 @@
 <head>
     <title>frag.io</title>
 
-    <style>/* Removes Mobile Highlight */ *{-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}</style>
+    <!--Removes Mobile Highlight-->
+    <style>* {
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    }</style>
 
+    <!--Imports-->
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+
+    <!--Scripts-->
     <script src="main.js"></script>
     <script src="gameObjects.js"></script>
+
 </head>
 
 <body onload="Main();">
-
-    <canvas id="Canvas" width="1440" height="803"></canvas>
+<canvas id="Canvas" width="1440" height="803"></canvas>
 </body>
 
 </html>
